fix upload image instead of url
